--- a/vueJs/oficinaVue/package.json
+++ b/vueJs/oficinaVue/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "axios": "^0.20.0",
+    "axios": ">=0.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
